<resources>
    <string name="app_name">Grading</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="menu_grading">Grading Track</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_gradinglist">Grading List</string>
    <string name="menu_gradingadd">Add Grading</string>
    <string name="labelLoadFromRoom">Load From Room When No Network</string>
    <string name="label_grading_assessment_date">Assessment Date</string>
    <string name="label_grading_student_name">Student Name</string>
    <string name="label_grading_instructor_name">Instructor Name</string>
    <string name="label_grading_course_name">Course Name</string>
    <string name="label_grading_course_room">Course Room</string>
    <string name="label_grading_numeric_grade">Numeric Grade</string>
    <string name="label_grading_letter_grade">Letter Grade</string>
    <string name="label_grading_academic_year">Academic Year</string>
    <string name="menu_share">Share</string>
    <string name="menu_submit">Submit</string>
    <string name="menu_wear">Wear</string>
    <string name="label_developer">Junjie Wang</string>

    <string name="preference_load_from_room">loadFromRoom</string>
    <string name="preference_high_grade">highGrade</string>
    <string name="appwidget_text">High Grade</string>
    <string name="add_widget">Add numeric grade widget</string>
    <string name="app_widget_description">See the high grade</string>

</resources>