<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/mobile_navigation"
app:startDestination="@+id/nav_gradinglist">

    <fragment
        android:id="@+id/nav_grading"
        android:name="info.hccis.grading.ui.grading.GradingFragment"
        android:label="@string/menu_grading"
        tools:layout="@layout/fragment_grading" />
    <fragment
        android:id="@+id/nav_gradingadd"
        android:name="info.hccis.grading.ui.grading.GradingFragment"
        android:label="@string/menu_gradingadd"
        tools:layout="@layout/fragment_grading" />


    <fragment
        android:id="@+id/nav_gradinglist"
        android:name="info.hccis.grading.ui.gradinglist.GradingListFragment"
        android:label="@string/menu_gradinglist"
        tools:layout="@layout/fragment_grading_track_list" />


    <fragment
        android:id="@+id/nav_settings"
        android:name="info.hccis.grading.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_about"
        android:name="info.hccis.grading.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />


</navigation>