<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.grading.GradingsFragment">

        <!-- Linear progress indicator -->
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicatorGrading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CalendarView
            android:id="@+id/calendarViewAssessmentDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressIndicatorGrading" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextAssessmentDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_grading_assessment_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarViewAssessmentDate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAssessmentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextStudentNameLable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_grading_student_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAssessmentDateLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextStudentName"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextCourseNameLable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_grading_course_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextStudentNameLable">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCourseName"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextCourseRoomLable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_grading_course_room"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCourseNameLable">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCourseRoom"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextInstructorNameLable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_grading_instructor_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCourseRoomLable">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInstructorName"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextAcademicYearLable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/label_grading_academic_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextInstructorNameLable">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAcademicYear"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextNumericGradeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/label_grading_numeric_grade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAcademicYearLable">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNumericGrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonWear"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_700"
            android:text="@string/menu_wear"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:icon="@android:drawable/ic_menu_upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonShare"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonShare"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_700"
            android:text="@string/menu_share"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:icon="@android:drawable/ic_menu_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonSubmitGrading"
            app:layout_constraintStart_toEndOf="@id/buttonWear" />

        <Button
            android:id="@+id/buttonSubmitGrading"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_700"
            android:text="@string/menu_submit"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:icon="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonShare" />


<!--        <TextView-->
<!--            android:id="@+id/textViewGradingSummary"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#9F3131"-->
<!--            android:text=""-->
<!--            android:textSize="24sp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/buttonSubmitGrading"-->
<!--            app:layout_constraintHeight_min="48dp" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
